# BridJ

./: .gitignore  .travis.yml  BuildNative  BuildNative.cmd  BuildNative_Debug  BuildNative_Debug.cmd  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CheckPackages  CleanNative  CleanNative.cmd  CommitBinaries  CopyVisualStudioBinaries.cmd  GitConfig  LICENSE  LICENSE.header  ProxyGen.java  README.md  RebuildNative  Run.java  Start 32bits Visual Studio.cmd  Start 64bits Visual Studio.cmd  android-sdk-dx.pom  appveyor.yml  buildMac  cleanAll  compile  echo-dx-pom  eclipse-formatter-config.xml  mingw-w64-i686.cmake  mingw-w64-x86_64.cmake  pom.xml  runProtectionTest  runTestsCLI
Example/: clean.sh  download_tools.sh
Example/jni/: Application.mk  example.c
Examples/AndroidExample/jni/: Android.mk  example.h
Examples/BasicExample/: .gitignore  Build.sh  BuildAll.sh  README.md  pom.xml
Examples/BasicExample/src/main/jnaerator/: config.jnaerator
Examples/BasicExample/src/main/native/example/: CMakeLists.txt  Makefile  example.cpp
Examples/BasicExample/src/main/native/example/include/: example.h
Examples/BasicExample/src/main/native/example/jni/: Android.mk  Application.mk
Examples/BasicExample/src/scripts/: Build.sh
admin/: android-dx-package  build farms machines  checkout_and_patch_dyncall.sh  compressLibraries  debug windows.txt  patch_dyncall.sh  resetLibraries  setup_freebsd8.2.sh  setup_iphone.sh  setup_linux.sh  setup_linux_buildFarm.sh  setup_openbsd.sh  setup_solaris10.sh  setup_solaris11.sh  uncompressLibraries  updateAndRebuild
contribs/Remi Emonet/: bridj-patch-over-r992.patch  bridj-patch-over-r992.txt
docs/: automated-tests.adoc  backwards-compatibility.adoc  bridj-and-c.adoc  bridj-and-cpp.adoc  bridj-and-scala.adoc  build.adoc  callbacks.adoc  com.adoc  contributing.adoc  credits-and-license.adoc  current-state.adoc  design.adoc  download.adoc  faq.adoc  google-summer-of-code.adoc  index.adoc  libraries-lookup.adoc  pointers.adoc  type-mapping.adoc  who-uses-bridj.adoc
scripts/: build-docker-qemu.sh
src/main/: Run.java
src/main/cpp/: Build Windows.cmd  Debugger.txt  RunMainDebug32.cmd
src/main/cpp/android-test/: AndroidManifest.xml  build.properties.template  build.sh
src/main/cpp/android-test/jni/: hello-jni.c
src/main/cpp/bridj/: .gitignore  CMakeLists.txt  CallbackHandler.c  CppHandler.c  Errors.c  Errors.h  Exceptions.c  Exceptions.h  FunctionHandler.c  GLIBCCompatibilityWraps.c  GNUmakefile  GenericJavaCallbackHandlers.c  HandlersCommon.c  HandlersCommon.h  JNI.c  JNI.h  JNI_prim.h  Make.sh  MakeAndroid.sh  Makefile  ObjCBlocks.m  ObjCHandler.c  ObjCProxy.h  ObjCProxy.h.bug  ObjCProxy.m  ObjCProxy.m.bug  Platform.c  Pointer.c  Pointer_prim.h  PrimDefs_boolean.h  PrimDefs_byte.h  PrimDefs_char.h  PrimDefs_double.h  PrimDefs_float.h  PrimDefs_int.h  PrimDefs_long.h  PrimDefs_short.h  PrimDefs_undef.h  Protected.h  RawNativeForwardCallback.c  (+28 more)
src/main/cpp/bridj/BridJ.xcodeproj/: project.pbxproj
src/main/cpp/bridj/BridJ.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/main/cpp/bridj/BridJ.xcodeproj/project.xcworkspace/xcuserdata/ochafik.xcuserdatad/: UserInterfaceState.xcuserstate
src/main/cpp/bridj/BridJ.xcodeproj/xcuserdata/ochafik.xcuserdatad/xcschemes/: BridJ.xcscheme  xcschememanagement.plist
src/main/cpp/bridj/jni/: Android.mk  Application.mk
src/main/cpp/buildsys/: GenerateJNIStubs.cmd
src/main/cpp/buildsys/vs2008/: CopyRulesIfNeeded.cmd  RebuildAll.cmd  SetEnv.cmd  bridj.sln  masm64.rules
src/main/demos/: TaskbarListDemo.java  TestCPP.java  package-info.java
src/main/java/org/bridj/: AbstractBridJRuntime.java  AbstractIntegral.java  AndroidClassDefiner.java  AndroidSupport.java  AndroidWorkaround.java  BridJ.java  BridJRuntime.java  CLong.java  CRuntime.java  CallIO.java  Callback.java  CallbackInterface.java  CallbackNativeImplementer.java  ClassDefiner.java  ComplexDouble.java  DefaultNativeList.java  DynamicCallback.java  DynamicFunction.java  DynamicFunctionFactory.java  DyncallStructs.java  EllipsisHelper.java  FlagSet.java  GenericCallback.java  HeadersReconstructor.java  IntValuedEnum.java  LastError.java  MethodCallInfo.java  NativeConstants.java  NativeEntities.java  NativeError.java  NativeLibrary.java  NativeList.java  NativeObject.java  NativeObjectInterface.java  OSGiBundleActivator.java  Platform.java  PlatformSupport.java  PointerGC.java  PointerLRUCache.java  SignalConstants.java  (+16 more)
src/main/javadoc/: overview.html
src/main/jnaerator/: config.jnaerator
src/main/old/: Functional.java
src/main/velocity/org/bridj/: BitFields.java  CommonPointerIOs.java  DefaultPointer.java  Init.c  JNI.java  Pointer.java  PointerIO.java  StructIO.java  Version.java
src/test/cpp/dependsOnTest/: CMakeLists.txt  GNUmakefile  Makefile  dependsOnTest.cpp  dependsOnTest.h  stdafx.cpp  test.cpp
src/test/cpp/dependsOnTest/build_out/darwin_universal_gcc_release/: libdependsOnTest.dylib
src/test/cpp/test/: CMakeLists.txt  GNUmakefile  Makefile  common.h  dllmain.cpp  objctest.h  objctest.m  stdafx.cpp  stdafx.h  structs.cpp  targetver.h  templates.cpp  test.cpp  test.h  testNamespaces.cpp  testNamespaces.h  test_extract.cpp
src/test/cpp/test/test.xcodeproj/: project.pbxproj
src/test/cpp/test/test.xcodeproj/xcuserdata/ochafik.xcuserdatad/xcschemes/: test.xcscheme  xcschememanagement.plist
src/test/cpp/test/testexe.xcodeproj/: project.pbxproj
src/test/cpp/test/testexe.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/test/cpp/test/testexe.xcodeproj/project.xcworkspace/xcuserdata/ochafik.xcuserdatad/: UserInterfaceState.xcuserstate
src/test/cpp/test/testexe.xcodeproj/xcuserdata/ochafik.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
src/test/cpp/test/testexe.xcodeproj/xcuserdata/ochafik.xcuserdatad/xcschemes/: testexe.xcscheme  xcschememanagement.plist
src/test/java/org/bridj/: #NASATest.java#  AndroidTest.java  AnnotationsTest.java  BitFieldTest.java  BridJTest.java  COMTest.java  CPPRuntimeTest.java  CPPTemplateTest.java  CPPTest.java  CPPTest2.java  CPPTest3.java  (+36 more)
travis/: docs.sh
(+203 files in other folders)
